# minnal

./: .claudeignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: bench.md  clippy.md  crate.md  git-push.md
config/: sample.toml
index/: CLAUDE.md  Cargo.toml  Index-Architecture.md
index/benches/: bench_predicate.rs
index/src/: bitmap.rs  blob_store.rs  container_store.rs  lib.rs  rowmap.rs  storage.rs  sync.rs
index/src/container/: array.rs  bitset.rs  mod.rs  ops.rs  run.rs
index/src/field/: field_index.rs  mod.rs  value.rs
index/src/query/: error.rs  eval.rs  lexer.rs  mod.rs  parser.rs
index/src/simd_support/: array_merge.rs  bitwise.rs  extract.rs  mod.rs  popcount.rs  run_bitset.rs  sum.rs
index/tests/: bitmap_query.rs  index.rs
minnal_db/: .gitignore  CLAUDE.md  Cargo.toml  QUICKSTART.md  README.md  benchmark.md
minnal_db/benches/: bench_distance_estimation.rs  bench_mixed.rs  bench_predicate.rs  bench_read.rs  bench_scan.rs  bench_sstable_lookup.rs  bench_typed.rs  bench_wal.rs  bench_write.rs  common.rs
minnal_db/benchmark/: run_benchmarks.sh
minnal_db/docs/: skiplist-crud.html
minnal_db/src/: lib.rs  main.rs  vector_kv.rs
minnal_db/src/db/: config.rs  database.rs  db.rs  error.rs  facade.rs  fail_log.rs  index_checkpoint_worker.rs  index_manager.rs  kv_store.rs  metrics.rs  mod.rs  namespace.rs  namespace_index.rs  stats.rs  toml_config.rs  ttl_worker.rs  wal.rs  wal_worker.rs
minnal_db/src/doc_store/: error.rs  index_manager.rs  index_observer.rs  index_progress.rs  mod.rs  schema.rs  store.rs  vec_index_worker.rs
minnal_db/src/index/: CLAUDE.md  Index-Architecture.md  bitmap.rs  blob_store.rs  container_store.rs  mod.rs  rowmap.rs  storage.rs  sync.rs
minnal_db/src/index/container/: array.rs  bitset.rs  mod.rs  ops.rs
minnal_db/src/index/field/: field_index.rs  mod.rs  predicate.rs  value.rs
minnal_db/src/index/query/: eval.rs  mod.rs  parser.rs
minnal_db/src/index/simd_support/: array_merge.rs  bitwise.rs  extract.rs  popcount.rs  run_bitset.rs
minnal_db/src/semantic_search/: Semantic-Search-Architecture.md  metrics.rs  mod.rs
minnal_db/src/semantic_search/chunking/: mod.rs
minnal_db/src/semantic_search/cluster/: mod.rs
minnal_db/src/semantic_search/index/: distance_estimator.rs  mod.rs  vector_index.rs
minnal_db/src/semantic_search/quantisation/: mod.rs
minnal_db/src/semantic_search/quantisation/rabitq/: mod.rs  quantisation_support.rs
minnal_db/src/semantic_search/service/: embedding_service.rs  mod.rs
minnal_db/src/store/: gc_journal.rs  gc_value_log_worker.rs  lsm_worker.rs  mod.rs
minnal_db/src/store/lsm/: bloom.rs  lsm_manifest.rs  lsm_tree.rs  mod.rs  skip_list.rs  sparse_index.rs
minnal_db/src/store/value_log/: mod.rs  sharded.rs
minnal_db/src/support/: mod.rs  simd_support.rs
minnal_db/src/test_data/: doc_embedding.json  est_dot_product_query.json  rabitq_multibit_codes.json  rabitq_multibit_packed_u128.json  rabitq_multibit_signed_i64.json  rabitq_singlebit_packed_u128.json
minnal_db/tests/: dense_row_ids.rs  field_index_typed.rs  gc_reclaim.rs  index_bitmap_query.rs  index_integration.rs
minnal_db_api/: Cargo.toml  README.md
minnal_db_api/src/: config.rs  config_report.rs  error.rs  id.rs  main.rs
minnal_db_api/src/routes/: admin_indices.rs  admin_storage.rs  admin_stores.rs  indices.rs  kv.rs  mod.rs
minnal_doc_store/: Cargo.toml
minnal_doc_store/src/: error.rs  hex.rs  index_manager.rs  index_observer.rs  index_progress.rs  lib.rs  main.rs  pagination.rs  schema.rs  store.rs  vec_index_worker.rs  vector_kv.rs
minnal_doc_store_api/: Cargo.toml  README.md
minnal_doc_store_api/src/: config.rs  error.rs  id.rs  main.rs
minnal_doc_store_api/src/routes/: admin_indices.rs  admin_storage.rs  admin_stores.rs  docs.rs  indices.rs  kv.rs  mod.rs  semantic_search.rs  stores.rs
minnal_tools/: Cargo.toml
minnal_tools/sample_data/: job-content-kv-schema.json  job-content-kv.jsonl
minnal_tools/src/: bulk_load.rs  main.rs
semantic_search/: CLAUDE.md  Cargo.toml  Semantic-Search-Architecture.md
semantic_search/benches/: bench_distance_estimation.rs
semantic_search/src/: lib.rs  metrics.rs
semantic_search/src/chunking/: mod.rs
semantic_search/src/cluster/: mod.rs
semantic_search/src/index/: composite_key.rs  distance_estimator.rs  vector_index.rs
semantic_search/src/quantisation/rabitq/: mod.rs  quantisation_support.rs
semantic_search/src/service/: embedding_service.rs  mod.rs
semantic_search/src/simd/: mod.rs
semantic_search/src/vector_math/: mod.rs
semantic_search/test_data/: est_dot_product_centroid.json  est_dot_product_multibit_codes.json  est_dot_product_singlebit_codes.json  query_embedding.json  rabitq_multibit_signed_i128.json  rabitq_real_centroid.json  rabitq_singlebit_codes.json  rabitq_singlebit_signed_i64.json  real_embedding.json
service/docker/: Dockerfile
service/embedding_support/gemma/: clusters.json
service/scripts/: build_docker.sh  release.sh  test_embedding.sh
service/scripts/examples/: docs.sh  indices.sh  stores.sh
tools/: Cargo.toml
tools/sample_data/: job-content-kv-schema.json  jobs-mini-schema.json  jobs-mini.jsonl  sample-data-jobs-schema.json
tools/src/: bulk_load.rs  main.rs
