[package]
name = "minnal_db"
version = "0.1.0"
edition = "2024"
description = "An embedded Minnal-style LSM + value-log key-value store"
default-run = "minnal_db"

[[bin]]
name = "minnal_db"
path = "src/main.rs"

[lib]
name = "minnal_db"
path = "src/lib.rs"

[dependencies]
tokio = {  version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1" }
rkyv = { version = "0.8.15", features = ["unaligned"] }
bytecheck = "0.8.0"
crc32fast = "1.5.0"
thiserror = { version = "2.0.18" }
parking_lot = {version = "0.12.5"}
log = { version = "0.4.29" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
tempfile = { version = "3.26.0" }
mm3h = {version = "0.1.3", features = ["avx"] }
crossbeam-epoch = "0.9.18"
toml = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
index = { path = "../index" }

[[bench]]
name = "bench_write"
harness = false

[[bench]]
name = "bench_read"
harness = false

[[bench]]
name = "bench_scan"
harness = false

[[bench]]
name = "bench_mixed"
harness = false

[[bench]]
name = "bench_wal"
harness = false

[[bench]]
name = "bench_typed"
harness = false

[[bench]]
name = "bench_sstable_lookup"
harness = false

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

