[package]
name = "minnal_db"
version = "0.1.0"
edition = "2024"
description = "Embeddable Minnal database: an LSM + value-log KV engine with optional RoaringBitmap field indexing, a JSON document store, and quantised ANN semantic search — selectable via cargo features"
license = "Apache-2.0"
repository = "https://github.com/minnal0021/minnal"
keywords = ["database", "lsm", "embedded", "search", "vector"]
categories = ["database-implementations", "data-structures"]
# Test fixtures and bundled design docs are only used by the crate's own tests
# (`#[cfg(test)]` `include_str!`) — never at consumer build time — so keep them
# out of the published tarball.
exclude = ["src/test_data/", "benches/data/", "src/**/*.md"]

# docs.rs builds on supported (Unix) targets only, with all features enabled so
# the doc-store and semantic-search modules are documented.
[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]

[lib]
name = "minnal_db"
path = "src/lib.rs"

[dependencies]
# ── Core engine ────────────────────────────────────────────────────────────
tokio = { version = "1.52.3", features = ["full"] }
rkyv = { version = "0.8.17", features = ["unaligned", "bytecheck", "alloc"] }
bytecheck = "0.8.2"
crc32fast = "1.5"
thiserror = "2.0.18"
parking_lot = "0.12.5"
log = "0.4.33"
mm3h = { version = "0.1.3", features = ["avx"] }
crossbeam-epoch = "0.9.20"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# ── Field indexing (folded `index` crate — part of the base engine) ─────────
memmap2 = "0.9.11"
# ── Semantic search (folded `semantic_search` crate) — behind `semantic-search`
rayon = { version = "1.12", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
simsimd = { version = "6.5.16", optional = true }
# ── Document store (folded `minnal_doc_store` crate) — behind `doc-store` ────
json_dotpath = { version = "1.1.0", optional = true }

[features]
default = ["kv-store"]
# Base LSM + value-log KV engine with RoaringBitmap field indexing. Marker
# feature: the engine and `index` are always compiled; `kv-store` names the
# default so downstreams can be explicit and leaves room for future splits.
kv-store = []
# Quantised ANN semantic search over stored vectors (external embedding service).
semantic-search = ["dep:reqwest", "dep:simsimd", "dep:rayon"]
# JSON document store (schema, CRUD, field-index queries). Independent of
# `semantic-search`: enable both together for embed-on-write + doc vector search.
doc-store = ["dep:json_dotpath"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10"
approx = "0.5.1"
tempfile = "3.27"

[[bench]]
name = "bench_write"
harness = false

[[bench]]
name = "bench_read"
harness = false

[[bench]]
name = "bench_scan"
harness = false

[[bench]]
name = "bench_mixed"
harness = false

[[bench]]
name = "bench_wal"
harness = false

[[bench]]
name = "bench_typed"
harness = false

[[bench]]
name = "bench_sstable_lookup"
harness = false

[[bench]]
name = "bench_predicate"
harness = false

[[bench]]
name = "bench_distance_estimation"
harness = false
required-features = ["semantic-search"]
