[package]
name = "minnal_db_api"
version = "0.1.0"
edition = "2024"
description = "RESTful HTTP API server for minnal_db"
publish = false

[[bin]]
name = "minnal_db_api"
path = "src/main.rs"

[dependencies]
minnal_db = { path = "../minnal_db", features = ["doc-store", "semantic-search"] }
axum = "0.8.9"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
toml = "1.1"
