[package]
name = "minnal_doc_store_api"
version = "0.1.0"
edition = "2024"
description = "RESTful HTTP API server for minnal_doc_store"

[[bin]]
name = "minnal_doc_store_api"
path = "src/main.rs"

[dependencies]
minnal_doc_store = { path = "../minnal_doc_store" }
minnal_db = { path = "../minnal_db" }
semantic_search = { path = "../semantic_search" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
toml = "0.8"
