[package]
name = "minnal_tools"
version = "0.1.0"
edition = "2024"
description = "Stand-alone utility tools for minnal"
publish = false

[[bin]]
name = "minnal_tools"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tempfile = "3.27"
