[package]
name = "semantic_search"
version = "0.1.0"
edition = "2024"
description = "Semantic search built on minnal_db"

[lib]
name = "semantic_search"
path = "src/lib.rs"

[dependencies]
minnal_db = { path = "../minnal_db" }
log = { version = "0.4.29" }
rayon = {version = "1.11.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
rkyv = { version = "0.8", features = ["alloc"] }
simsimd = { version = "6.5.16" }
thiserror = { version = "2" }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_distance_estimation"
harness = false
