[package]
name = "tools"
version = "0.1.0"
edition = "2024"
description = "Stand-alone utility tools for minnal"
publish = false

[[bin]]
name = "minnal_tools"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
